Se agregaron dos links al nav bar principal

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                         <a href="" class="nav-link">Inicio</a>
                         <a href="menu.html" class="nav-link">Menu</a>
                         <a href="https://codigofacilito.com" class="nav-link">CódigoFacilito</a>
+                        <a href="" class="nav-link">Inicio2</a>
+                        <a href="" class="nav-link">Inicio3</a>
                     </nav>
                 </header>    
                 <article>
