--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
                             <h1 class="red-text pacifico title">Postres Facilito3</h1>
                         </header>
                 </article>
+                <article>
+                        <header class="text-center">
+                            <img src="./imagenes/logo.png" height="100" alt="Logo de PostresFacilito">
+                            <h1 class="red-text pacifico title">Postres Facilito5/h1>
+                        </header>
+                </article>
             </div>
         </div>
     </div>    
