Se agrego Article6 y re corrigio Article5

--- a/index.html
+++ b/index.html
@@ -47,7 +47,13 @@
                 <article>
                         <header class="text-center">
                             <img src="./imagenes/logo.png" height="100" alt="Logo de PostresFacilito">
-                            <h1 class="red-text pacifico title">Postres Facilito5/h1>
+                            <h1 class="red-text pacifico title">Postres Facilito5</h1>
+                        </header>
+                </article>
+                <article>
+                        <header class="text-center">
+                            <img src="./imagenes/logo.png" height="100" alt="Logo de PostresFacilito">
+                            <h1 class="red-text pacifico title">Postres Facilito6</h1>
                         </header>
                 </article>
             </div>
